unpackaged/main/default/objects/TNP_ClientMap__c/TNP_ClientMap__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TNP ClientMap</label>
</CustomObject>