unpackaged/main/default/objects/TNP_ClientMap__c/fields/B2C_Customer_No_pc__c.field-meta.xml
<CustomField>
    <fullName>B2C_Customer_No_pc__c</fullName>
    <label>B2C_Customer_No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>