unpackaged/main/default/objects/TNP_ClientMap__c/fields/Birthday_pc__c.field-meta.xml
<CustomField>
    <fullName>Birthday_pc__c</fullName>
    <label>BirthDay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>