unpackaged/main/default/objects/TNP_ClientMap__c/fields/Birthmonth_pc__c.field-meta.xml
<CustomField>
    <fullName>Birthmonth_pc__c</fullName>
    <label>BirthMonth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>