unpackaged/main/default/objects/TNP_ClientMap__c/fields/Birthyear_pc__c.field-meta.xml
<CustomField>
    <fullName>Birthyear_pc__c</fullName>
    <label>BirthYear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>