unpackaged/main/default/objects/TNP_ClientMap__c/fields/ClientAdvisorId_pc__c.field-meta.xml
<CustomField>
    <fullName>ClientAdvisorId_pc__c</fullName>
    <label>ClientAdvisorId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>