unpackaged/main/default/objects/TNP_ClientMap__c/fields/Compagny_pc__c.field-meta.xml
<CustomField>
    <fullName>Compagny_pc__c</fullName>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>