unpackaged/main/default/objects/TNP_ClientMap__c/fields/EReceipt_pc__c.field-meta.xml
<CustomField>
    <fullName>EReceipt_pc__c</fullName>
    <label>E-Receipt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>