unpackaged/main/default/objects/TNP_ClientMap__c/fields/FiscalIdentificationNumber_pc__c.field-meta.xml
<CustomField>
    <fullName>FiscalIdentificationNumber_pc__c</fullName>
    <label>FiscalIdentifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>