unpackaged/main/default/objects/TNP_ClientMap__c/fields/Gender_pc__c.field-meta.xml
<CustomField>
    <fullName>Gender_pc__c</fullName>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>