unpackaged/main/default/objects/TNP_ClientMap__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>SFDC_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>