unpackaged/main/default/objects/TNP_ClientMap__c/fields/JobTitle_pc__c.field-meta.xml
<CustomField>
    <fullName>JobTitle_pc__c</fullName>
    <label>JobTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>