unpackaged/main/default/objects/TNP_ClientMap__c/fields/Language_pc__c.field-meta.xml
<CustomField>
    <fullName>Language_pc__c</fullName>
    <label>LanguageId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>