unpackaged/main/default/objects/TNP_ClientMap__c/fields/Nationality_pc__c.field-meta.xml
<CustomField>
    <fullName>Nationality_pc__c</fullName>
    <label>Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>