unpackaged/main/default/objects/TNP_ClientMap__c/fields/OriginStoreCode_c__c.field-meta.xml
<CustomField>
    <fullName>OriginStoreCode_c__c</fullName>
    <label>OriginStoreCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>