unpackaged/main/default/objects/TNP_ClientMap__c/fields/Other_sources_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Other_sources_ID_c__c</fullName>
    <label>Other_sources_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>