unpackaged/main/default/objects/TNP_ClientMap__c/fields/PassportNumber_pc__c.field-meta.xml
<CustomField>
    <fullName>PassportNumber_pc__c</fullName>
    <label>PassportNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>