unpackaged/main/default/objects/TNP_ClientMap__c/fields/PhoneticFullName_pc__c.field-meta.xml
<CustomField>
    <fullName>PhoneticFullName_pc__c</fullName>
    <label>PhoneticFullName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>