unpackaged/main/default/objects/TNP_ClientMap__c/fields/RomanizedFirstname_pc__c.field-meta.xml
<CustomField>
    <fullName>RomanizedFirstname_pc__c</fullName>
    <label>RomanizedFirstname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>