unpackaged/main/default/objects/TNP_ClientMap__c/fields/RomanizedLastName_pc__c.field-meta.xml
<CustomField>
    <fullName>RomanizedLastName_pc__c</fullName>
    <label>RomanizedLastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>