unpackaged/main/default/objects/TNP_ClientMap__c/fields/SecondAlphabetFirstname_pc__c.field-meta.xml
<CustomField>
    <fullName>SecondAlphabetFirstname_pc__c</fullName>
    <label>SecondAlphabetFirstname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>