unpackaged/main/default/objects/TNP_ClientMap__c/fields/SecondAlphabetLastname_pc__c.field-meta.xml
<CustomField>
    <fullName>SecondAlphabetLastname_pc__c</fullName>
    <label>SecondAlphabetLastname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>