unpackaged/main/default/objects/TNP_ClientMap__c/fields/SecondName_pc__c.field-meta.xml
<CustomField>
    <fullName>SecondName_pc__c</fullName>
    <label>SecondName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>