unpackaged/main/default/objects/TNP_ClientMap__c/fields/SFSC_Contact_Key_pc__c.field-meta.xml
<CustomField>
    <fullName>SFSC_Contact_Key_pc__c</fullName>
    <label>SFSC_Contact_Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>