unpackaged/main/default/objects/TNP_ClientMap__c/fields/VIP_pc__c.field-meta.xml
<CustomField>
    <fullName>VIP_pc__c</fullName>
    <label>VIP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>